--- a/index.html
+++ b/index.html
@@ -4,10 +4,243 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon" />
-    <title>Fisayomi Portfolio</title>
+    <title>About Fisayomi</title>
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
+    <!-- Navbar section -->
+    <header>
+      <nav>
+        <section class="logo">
+          <a href="https://github.com/OlaleyeFisayo">OlaleyeFisayo</a>
+        </section>
+
+        <section class="desktop-view">
+          <ul>
+            <li class="nav-link">
+              <a href="#home">Home</a>
+            </li>
+            <li class="nav-link">
+              <a href="#about">About</a>
+            </li>
+            <li class="nav-link">
+              <a href="#projects">Projects</a>
+            </li>
+            <li class="nav-link">
+              <a href="#contact">Contact</a>
+            </li>
+          </ul>
+        </section>
+
+        <div class="hamburger-menu">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+        </div>
+
+        <section class="mobile-view">
+          <div class="x">
+            <div class="line line1"></div>
+            <div class="line line2"></div>
+          </div>
+
+          <ul class="mobile-view_nav-list">
+            <li>
+              <a href="#home">Home</a>
+            </li>
+            <li>
+              <a href="#about">About</a>
+            </li>
+            <li>
+              <a href="#projects">Projects</a>
+            </li>
+            <li>
+              <a href="#contact">Contact</a>
+            </li>
+          </ul>
+        </section>
+      </nav>
+    </header>
+
+    <main>
+      <!-- Home Section  -->
+      <section id="home">
+        <section class="content">
+          <section class="home-main">
+            <section class="home-text">
+              <h1>
+                Full stack Web Developer
+                <img src="./assets/home/svgs/handwave.svg" alt="hand wave" />
+              </h1>
+              <p>
+                Hi, I'm Festus-Olaleye Fisayo, A passionate Full-Stack Developer
+                based in Lagos, Nigeria 📍
+              </p>
+              <span>
+                <a
+                  href="https://www.linkedin.com/in/fisayo-festus-olaleye-67a778227/"
+                  target="_blank"
+                >
+                  <svg
+                    width="27"
+                    height="28"
+                    viewBox="0 0 27 28"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M24.375 0.930054H1.81641C0.820312 0.930054 0 1.80896 0 2.86365V25.3051C0 26.3597 0.820312 27.1801 1.81641 27.1801H24.375C25.3711 27.1801 26.25 26.3597 26.25 25.3051V2.86365C26.25 1.80896 25.3711 0.930054 24.375 0.930054ZM7.91016 23.4301H4.04297V10.9496H7.91016V23.4301ZM5.97656 9.19177C4.6875 9.19177 3.69141 8.19568 3.69141 6.96521C3.69141 5.73474 4.6875 4.68005 5.97656 4.68005C7.20703 4.68005 8.20312 5.73474 8.20312 6.96521C8.20312 8.19568 7.20703 9.19177 5.97656 9.19177ZM22.5 23.4301H18.5742V17.3363C18.5742 15.9301 18.5742 14.0551 16.582 14.0551C14.5312 14.0551 14.2383 15.6371 14.2383 17.2777V23.4301H10.3711V10.9496H14.0625V12.6488H14.1211C14.6484 11.6527 15.9375 10.598 17.8125 10.598C21.7383 10.598 22.5 13.2347 22.5 16.5746V23.4301Z"
+                      fill="#2D2E32"
+                    />
+                  </svg>
+                </a>
+                <a href="https://github.com/OlaleyeFisayo" target="_blank">
+                  <svg
+                    width="30"
+                    height="29"
+                    viewBox="0 0 30 29"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M9.91797 23.3754C9.91797 23.2582 9.80078 23.141 9.625 23.141C9.44922 23.141 9.33203 23.2582 9.33203 23.3754C9.33203 23.4926 9.44922 23.6097 9.625 23.5511C9.80078 23.5511 9.91797 23.4926 9.91797 23.3754ZM8.10156 23.0824C8.10156 23.1996 8.21875 23.3754 8.39453 23.3754C8.51172 23.434 8.6875 23.3754 8.74609 23.2582C8.74609 23.141 8.6875 23.0238 8.51172 22.9652C8.33594 22.9066 8.16016 22.9652 8.10156 23.0824ZM10.7383 23.0238C10.5625 23.0238 10.4453 23.141 10.4453 23.3168C10.4453 23.434 10.6211 23.4926 10.7969 23.434C10.9727 23.3754 11.0898 23.3168 11.0312 23.1996C11.0312 23.0824 10.8555 22.9652 10.7383 23.0238ZM14.5469 0.523804C6.46094 0.523804 0.25 6.73474 0.25 14.8207C0.25 21.3246 4.29297 26.891 10.1523 28.8832C10.9141 29.0004 11.1484 28.5316 11.1484 28.1801C11.1484 27.7699 11.1484 25.7777 11.1484 24.5472C11.1484 24.5472 7.04688 25.4261 6.16797 22.7894C6.16797 22.7894 5.52344 21.0902 4.58594 20.6801C4.58594 20.6801 3.23828 19.7426 4.64453 19.7426C4.64453 19.7426 6.10938 19.8597 6.92969 21.266C8.21875 23.5511 10.3281 22.9066 11.207 22.4965C11.3242 21.559 11.6758 20.9144 12.1445 20.5043C8.86328 20.1527 5.52344 19.684 5.52344 14.059C5.52344 12.4183 5.99219 11.6566 6.92969 10.6019C6.75391 10.1918 6.28516 8.66833 7.10547 6.61755C8.27734 6.26599 11.1484 8.19958 11.1484 8.19958C12.3203 7.84802 13.5508 7.73083 14.7812 7.73083C16.0703 7.73083 17.3008 7.84802 18.4727 8.19958C18.4727 8.19958 21.2852 6.2074 22.5156 6.61755C23.3359 8.66833 22.8086 10.1918 22.6914 10.6019C23.6289 11.6566 24.2148 12.4183 24.2148 14.059C24.2148 19.684 20.7578 20.1527 17.4766 20.5043C18.0039 20.973 18.4727 21.8519 18.4727 23.2582C18.4727 25.1918 18.4141 27.6527 18.4141 28.1215C18.4141 28.5316 18.707 29.0004 19.4688 28.8246C25.3281 26.891 29.3125 21.3246 29.3125 14.8207C29.3125 6.73474 22.6914 0.523804 14.5469 0.523804ZM5.93359 20.7386C5.81641 20.7972 5.875 20.973 5.93359 21.0902C6.05078 21.1488 6.16797 21.2074 6.28516 21.1488C6.34375 21.0902 6.34375 20.9144 6.22656 20.7972C6.10938 20.7386 5.99219 20.6801 5.93359 20.7386ZM5.28906 20.2699C5.23047 20.3871 5.28906 20.4457 5.40625 20.5043C5.52344 20.5629 5.64062 20.5629 5.69922 20.4457C5.69922 20.3871 5.64062 20.3285 5.52344 20.2699C5.40625 20.2113 5.34766 20.2113 5.28906 20.2699ZM7.16406 22.3793C7.10547 22.4379 7.10547 22.6136 7.28125 22.7308C7.39844 22.848 7.57422 22.9066 7.63281 22.7894C7.69141 22.7308 7.69141 22.5551 7.57422 22.4379C7.45703 22.3207 7.28125 22.2621 7.16406 22.3793ZM6.51953 21.5004C6.40234 21.559 6.40234 21.7347 6.51953 21.8519C6.63672 21.9691 6.75391 22.0277 6.87109 21.9691C6.92969 21.9105 6.92969 21.7347 6.87109 21.6176C6.75391 21.5004 6.63672 21.4418 6.51953 21.5004Z"
+                      fill="#2D2E32"
+                    />
+                  </svg>
+                </a>
+              </span>
+            </section>
+            <div class="home-img">
+              <img src="./assets/home/pic.jpg" alt="pic" />
+            </div>
+          </section>
+          <section class="skills">
+            <p>Tech Stack</p>
+            <ul>
+              <li>
+                <img src="./assets/home/svgs/icons8-html-5.svg" alt="HTML" />
+              </li>
+              <li>
+                <img src="./assets/home/svgs/icons8-css3.svg" alt="CSS" />
+              </li>
+              <li>
+                <img
+                  src="./assets/home/svgs/icons8-javascript.svg"
+                  alt="JavaScript"
+                />
+              </li>
+              <li>
+                <img src="./assets/home/svgs/icons8-react.svg" alt="React" />
+              </li>
+              <li>
+                <img
+                  src="./assets/home/svgs/icons8-typescript.svg"
+                  alt="TypeScript"
+                />
+              </li>
+              <li>
+                <img src="./assets/home/svgs/icons8-redux.svg" alt="Redux" />
+              </li>
+              <li>
+                <img src="./assets/home/svgs/icons8-sass.svg" alt="SASS" />
+              </li>
+              <li>
+                <img
+                  src="./assets/home/svgs/icons8-tailwind-css.svg"
+                  alt="Tailwind CSS"
+                />
+              </li>
+              <li>
+                <img src="./assets/home/svgs/icons8-git.svg" alt="Git" />
+              </li>
+              <li>
+                <img src="./assets/home/svgs/icons8-node-js.svg" alt="Node" />
+              </li>
+            </ul>
+          </section>
+        </section>
+      </section>
+
+      <!-- About Section -->
+      <section id="about">
+        <section class="about-content">
+          <section class="img-side">
+            <img
+              src="./assets/about/about-img.webp"
+              alt="about img"
+              class="about-img"
+            />
+            <span>
+              <img
+                src="./assets/about/working-emoji.c5325f52b5be329995a5.png"
+                alt="Working Emoji"
+              />
+            </span>
+          </section>
+          <section class="text-side">
+            <h1>About Me</h1>
+            <h3>A dedicated Full-stack Web developer</h3>
+            <p>
+              Passion and dedication are at the heart of everything I do in the
+              tech world. I believe in the power of technology to transform
+              ideas into reality, and my commitment to this belief drives me to
+              continually push my boundaries and explore new horizons in full
+              stack web development. From the moment I embarked on this journey,
+              I've been unwavering in my dedication to honing my skills, staying
+              up-to-date with the latest industry trends, and delivering
+              high-quality solutions that make a real impact.
+            </p>
+          </section>
+        </section>
+
+        <section class="img-slide">
+          <section class="img-slider">
+            <img src="./assets/about/one.jpg" alt="one" />
+            <img src="./assets/about/two.jpg" alt="two" />
+            <img src="./assets/about/three.jpg" alt="three" />
+            <img src="./assets/about/four.jpg" alt="four" />
+            <img src="./assets/about/five.jpg" alt="five" />
+          </section>
+        </section>
+      </section>
+
+      <!-- Project Section -->
+      <section id="projects">
+        <div class="project-content">
+          <h1>Projects</h1>
+          <p>
+            Each project demonstrates my attention to detail and proficiency.
+          </p>
+          <div class="project-grid"></div>
+        </div>
+      </section>
+
+      <!-- Contact Section -->
+      <section id="contact">
+        <div class="contact-content">
+          <div class="contact-title">
+            <h1>Contact</h1>
+            <h2>Hit me up 👇</h2>
+          </div>
+          <div class="contact-area">
+            <div class="contact-box">
+              <span>
+                <img src="./assets/contact/email.svg" alt="email" />
+              </span>
+              <div class="contact-info">
+                <h1>Mail</h1>
+                <p>
+                  <a href="mailto:festusolaleyef@gmail.com">
+                    festusolaleyef@gmail.com
+                  </a>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
     <script src="./app.js"></script>
   </body>
 </html>
