--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon" />
     <title>About Fisayomi</title>
+    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
@@ -193,15 +193,21 @@
           </section>
         </section>
 
-        <section class="img-slide">
-          <section class="img-slider">
-            <img src="./assets/about/one.jpg" alt="one" />
-            <img src="./assets/about/two.jpg" alt="two" />
-            <img src="./assets/about/three.jpg" alt="three" />
-            <img src="./assets/about/four.jpg" alt="four" />
-            <img src="./assets/about/five.jpg" alt="five" />
-          </section>
+        <section class="gallery">
+          <div class="gallary-container">
+            <img class="gallery-item gallery-item-1" src="./assets/about/one.jpg" alt="one" data-index="1" />
+            <img class="gallery-item gallery-item-2" src="./assets/about/two.jpg" alt="two" data-index="2" />
+            <img class="gallery-item gallery-item-3" src="./assets/about/three.jpg" alt="three" data-index="3" />
+            <img class="gallery-item gallery-item-4" src="./assets/about/four.jpg" alt="four" data-index="4" />
+            <img class="gallery-item gallery-item-5" src="./assets/about/five.jpg" alt="five" data-index="5" />
+            <img class="gallery-item gallery-item-6" src="./assets/about/six.jpg" alt="six" data-index="6" />
+          </div>
+  
+          <div class="gallery-controls">
+            
+          </div>
         </section>
+
       </section>
 
       <!-- Project Section -->
