--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Fisayomi</title>
-    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon" />
+    <title>About Popola</title>
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
@@ -12,7 +11,7 @@
     <header>
       <nav>
         <section class="logo">
-          <a href="https://github.com/OlaleyeFisayo">OlaleyeFisayo</a>
+          <a href="https://github.com/OlaleyeFisayo">PoopolaOoreoluwa</a>
         </section>
 
         <section class="desktop-view">
@@ -22,9 +21,6 @@
             </li>
             <li class="nav-link">
               <a href="#about">About</a>
-            </li>
-            <li class="nav-link">
-              <a href="#projects">Projects</a>
             </li>
             <li class="nav-link">
               <a href="#contact">Contact</a>
@@ -52,9 +48,6 @@
               <a href="#about">About</a>
             </li>
             <li>
-              <a href="#projects">Projects</a>
-            </li>
-            <li>
               <a href="#contact">Contact</a>
             </li>
           </ul>
@@ -69,12 +62,12 @@
           <section class="home-main">
             <section class="home-text">
               <h1>
-                Full stack Web Developer
+                Data Analyst / Entrepreneur
                 <img src="./assets/home/svgs/handwave.svg" alt="hand wave" />
               </h1>
               <p>
-                Hi, I'm Festus-Olaleye Fisayo, A passionate Full-Stack Developer
-                based in Lagos, Nigeria 📍
+                Hi, I'm Popola Ooreoluwa Divine, A passionate Data Analyst based
+                in Lagos, Nigeria 📍
               </p>
               <span>
                 <a
@@ -111,52 +104,8 @@
               </span>
             </section>
             <div class="home-img">
-              <img src="./assets/home/pic.jpg" alt="pic" />
+              <img src="./assets/home/headshot.JPG" alt="pic" />
             </div>
-          </section>
-          <section class="skills">
-            <p>Tech Stack</p>
-            <ul>
-              <li>
-                <img src="./assets/home/svgs/icons8-html-5.svg" alt="HTML" />
-              </li>
-              <li>
-                <img src="./assets/home/svgs/icons8-css3.svg" alt="CSS" />
-              </li>
-              <li>
-                <img
-                  src="./assets/home/svgs/icons8-javascript.svg"
-                  alt="JavaScript"
-                />
-              </li>
-              <li>
-                <img src="./assets/home/svgs/icons8-react.svg" alt="React" />
-              </li>
-              <li>
-                <img
-                  src="./assets/home/svgs/icons8-typescript.svg"
-                  alt="TypeScript"
-                />
-              </li>
-              <li>
-                <img src="./assets/home/svgs/icons8-redux.svg" alt="Redux" />
-              </li>
-              <li>
-                <img src="./assets/home/svgs/icons8-sass.svg" alt="SASS" />
-              </li>
-              <li>
-                <img
-                  src="./assets/home/svgs/icons8-tailwind-css.svg"
-                  alt="Tailwind CSS"
-                />
-              </li>
-              <li>
-                <img src="./assets/home/svgs/icons8-git.svg" alt="Git" />
-              </li>
-              <li>
-                <img src="./assets/home/svgs/icons8-node-js.svg" alt="Node" />
-              </li>
-            </ul>
           </section>
         </section>
       </section>
@@ -166,7 +115,7 @@
         <section class="about-content">
           <section class="img-side">
             <img
-              src="./assets/about/about-img.webp"
+              src="./assets/about/OIP.jpg"
               alt="about img"
               class="about-img"
             />
@@ -179,7 +128,7 @@
           </section>
           <section class="text-side">
             <h1>About Me</h1>
-            <h3>A dedicated Full-stack Web developer</h3>
+            <h3>A dedicated Data Analysis</h3>
             <p>
               Passion and dedication are at the heart of everything I do in the
               tech world. I believe in the power of technology to transform
@@ -192,33 +141,6 @@
             </p>
           </section>
         </section>
-
-        <section class="gallery">
-          <div class="gallary-container">
-            <img class="gallery-item gallery-item-1" src="./assets/about/one.jpg" alt="one" data-index="1" />
-            <img class="gallery-item gallery-item-2" src="./assets/about/two.jpg" alt="two" data-index="2" />
-            <img class="gallery-item gallery-item-3" src="./assets/about/three.jpg" alt="three" data-index="3" />
-            <img class="gallery-item gallery-item-4" src="./assets/about/four.jpg" alt="four" data-index="4" />
-            <img class="gallery-item gallery-item-5" src="./assets/about/five.jpg" alt="five" data-index="5" />
-            <img class="gallery-item gallery-item-6" src="./assets/about/six.jpg" alt="six" data-index="6" />
-          </div>
-  
-          <div class="gallery-controls">
-            
-          </div>
-        </section>
-
-      </section>
-
-      <!-- Project Section -->
-      <section id="projects">
-        <div class="project-content">
-          <h1>Projects</h1>
-          <p>
-            Each project demonstrates my attention to detail and proficiency.
-          </p>
-          <div class="project-grid"></div>
-        </div>
       </section>
 
       <!-- Contact Section -->
