--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <header>
       <nav>
         <section class="logo">
-          <a href="https://github.com/OlaleyeFisayo">PoopolaOoreoluwa</a>
+          <a href="https://github.com/OoreLUWA" target="_blank"
+            >PoopolaOoreoluwa</a
+          >
         </section>
 
         <section class="desktop-view">
@@ -71,7 +73,7 @@
               </p>
               <span>
                 <a
-                  href="https://www.linkedin.com/in/fisayo-festus-olaleye-67a778227/"
+                  href="https://ng.linkedin.com/in/ooreoluwa-popoola-3731681b7"
                   target="_blank"
                 >
                   <svg
@@ -87,7 +89,7 @@
                     />
                   </svg>
                 </a>
-                <a href="https://github.com/OlaleyeFisayo" target="_blank">
+                <a href="https://github.com/OoreLUWA" target="_blank">
                   <svg
                     width="30"
                     height="29"
@@ -130,14 +132,15 @@
             <h1>About Me</h1>
             <h3>A dedicated Data Analysis</h3>
             <p>
-              Passion and dedication are at the heart of everything I do in the
-              tech world. I believe in the power of technology to transform
-              ideas into reality, and my commitment to this belief drives me to
-              continually push my boundaries and explore new horizons in full
-              stack web development. From the moment I embarked on this journey,
-              I've been unwavering in my dedication to honing my skills, staying
-              up-to-date with the latest industry trends, and delivering
-              high-quality solutions that make a real impact.
+              I am a dependable professional with strong communication, time
+              management, and computer skills. As a driven and detail-oriented
+              individual, I am motivated to apply analytical and problem-solving
+              abilities to address complex challenges in the society. Currently
+              a student, I am eager to transition into the workforce to acquire
+              real-world experience, demonstrating my ability to efficiently
+              complete tasks both independently and collaboratively. My
+              reliability and commitment, coupled with a readiness to learn and
+              contribute, make me an asset for your company's growth.
             </p>
           </section>
         </section>
@@ -158,9 +161,7 @@
               <div class="contact-info">
                 <h1>Mail</h1>
                 <p>
-                  <a href="mailto:festusolaleyef@gmail.com">
-                    festusolaleyef@gmail.com
-                  </a>
+                  <a href="mailto:ooredivi1@gmail.com"> ooredivi1@gmail.com </a>
                 </p>
               </div>
             </div>
